--- a/src/main/java/br/senac/sp/aula2/view/ExemploDialogosView.form
+++ b/src/main/java/br/senac/sp/aula2/view/ExemploDialogosView.form
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jButton1"/>
+      </Properties>
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Exemplo Di&#xe1;logos - Frame Principal"/>
@@ -82,7 +89,7 @@
                       <Component id="btnEntradaSimples" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="btnOpcoes" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace pref="29" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
